--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -917,6 +917,9 @@
   "lighthouse-core/audits/installable-manifest.js | url-not-supported-for-webapk": {
     "message": "A URL in the manifest contains a username, password, or port"
   },
+  "lighthouse-core/audits/installable-manifest.js | warn-not-offline-capable": {
+    "message": "Page does not work offline. The page will not be regarded\n              as installable after Chrome 93, stable release August 2021."
+  },
   "lighthouse-core/audits/is-on-https.js | allowed": {
     "message": "Allowed"
   },
