--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -855,7 +855,7 @@
     "message": "Manifest 'display' property must be one of 'standalone', 'fullscreen', or 'minimal-ui'"
   },
   "lighthouse-core/audits/installable-manifest.js | manifest-display-override-not-supported": {
-    "message": "Manifest contains 'display_override' field, and the first supported display \n                mode must be one of 'standalone', 'fulcreen', or 'minimal-ui"
+    "message": "Manifest contains 'display_override' field, and the first supported display mode must be one of 'standalone', 'fullscreen', or 'minimal-ui'"
   },
   "lighthouse-core/audits/installable-manifest.js | manifest-empty": {
     "message": "Manifest could not be fetched, is empty, or could not be parsed"
@@ -867,7 +867,7 @@
     "message": "Manifest does not contain a 'name' or 'short_name' field"
   },
   "lighthouse-core/audits/installable-manifest.js | manifest-missing-suitable-icon": {
-    "message": "Manifest does not contain a suitable icon - PNG, \n                    SVG or WebP format of at least {value0} px \n                    is required, the sizes attribute must be set, and the purpose attribute, \n                    if set, must include \"any\" or \"maskable\"."
+    "message": "Manifest does not contain a suitable icon - PNG, SVG or WebP format of at least {value0} px is required, the sizes attribute must be set, and the purpose attribute, if set, must include \"any\" or \"maskable\"."
   },
   "lighthouse-core/audits/installable-manifest.js | no-acceptable-icon": {
     "message": "No supplied icon is at least {value0} px square in PNG, SVG or WebP format"
@@ -882,13 +882,13 @@
     "message": "Page has no manifest <link> URL"
   },
   "lighthouse-core/audits/installable-manifest.js | no-matching-service-worker": {
-    "message": "No matching service worker detected. You may need to reload the page, \n    or check that the scope of the service worker for the current page \n    encloses the scope and start URL from the manifest."
+    "message": "No matching service worker detected. You may need to reload the page, or check that the scope of the service worker for the current page encloses the scope and start URL from the manifest."
   },
   "lighthouse-core/audits/installable-manifest.js | no-url-for-service-worker": {
     "message": "Could not check service worker without a 'start_url' field in the manifest"
   },
   "lighthouse-core/audits/installable-manifest.js | noErrorId": {
-    "message": "Installability error id '{errorId}' is not recognized."
+    "message": "Installability error id '{errorId}' is not recognized"
   },
   "lighthouse-core/audits/installable-manifest.js | not-from-secure-origin": {
     "message": "Page is not served from a secure origin"
@@ -906,7 +906,7 @@
     "message": "Manifest specifies prefer_related_applications: true"
   },
   "lighthouse-core/audits/installable-manifest.js | prefer-related-applications-only-beta-stable": {
-    "message": "prefer_related_applications is only supported on Chrome Beta and Stable channe \n                on Android."
+    "message": "prefer_related_applications is only supported on Chrome Beta and Stable channels on Android."
   },
   "lighthouse-core/audits/installable-manifest.js | start-url-not-valid": {
     "message": "Manifest start URL is not valid"
@@ -918,7 +918,7 @@
     "message": "A URL in the manifest contains a username, password, or port"
   },
   "lighthouse-core/audits/installable-manifest.js | warn-not-offline-capable": {
-    "message": "Page does not work offline. The page will not be regarded\n              as installable after Chrome 93, stable release August 2021."
+    "message": "Page does not work offline. The page will not be regarded as installable after Chrome 93, stable release August 2021."
   },
   "lighthouse-core/audits/is-on-https.js | allowed": {
     "message": "Allowed"
