--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -855,7 +855,7 @@
     "message": "T̂h́ê áp̂ṕ îś âĺr̂éâd́ŷ ín̂śt̂ál̂ĺêd́"
   },
   "lighthouse-core/audits/installable-manifest.js | cannot-download-icon": {
-    "message": "D̂óŵńl̂óâd́êd́ îćôń ŵáŝ ém̂ṕt̂ý ôŕ ĉór̂ŕûṕt̂éd̂"
+    "message": "Îćôń ŵáŝ ún̂áb̂ĺê t́ô b́ê d́ôẃn̂ĺôád̂éd̂"
   },
   "lighthouse-core/audits/installable-manifest.js | columnValue": {
     "message": "F̂áîĺûŕê ŕêáŝón̂"
