--- a/lighthouse-core/lib/i18n/locales/en-US.json
+++ b/lighthouse-core/lib/i18n/locales/en-US.json
@@ -855,7 +855,7 @@
     "message": "The app is already installed"
   },
   "lighthouse-core/audits/installable-manifest.js | cannot-download-icon": {
-    "message": "Icon was unable to be downloaded"
+    "message": "Could not download a required icon from the manifest"
   },
   "lighthouse-core/audits/installable-manifest.js | columnValue": {
     "message": "Failure reason"
