--- a/lighthouse-core/lib/i18n/locales/en-XL.json
+++ b/lighthouse-core/lib/i18n/locales/en-XL.json
@@ -519,7 +519,7 @@
     "message": "R̂éd̂úĉé ûńûśêd́ ĈŚŜ"
   },
   "lighthouse-core/audits/byte-efficiency/unused-javascript.js | description": {
-    "message": "R̂éd̂úĉé ûńûśêd́ Ĵáv̂áŜćr̂íp̂t́ t̂ó r̂éd̂úĉé b̂ýt̂éŝ ćôńŝúm̂éd̂ b́ŷ ńêt́ŵór̂ḱ âćt̂ív̂ít̂ý. [L̂éâŕn̂ ḿôŕê](https://web.dev/unused-javascript/)."
+    "message": "R̂éd̂úĉé ûńûśêd́ Ĵáv̂áŜćr̂íp̂t́ âńd̂ d́êf́êŕ l̂óâd́îńĝ śĉŕîṕt̂ś ûńt̂íl̂ t́ĥéŷ ár̂é r̂éq̂úîŕêd́ t̂ó r̂éd̂úĉé b̂ýt̂éŝ ćôńŝúm̂éd̂ b́ŷ ńêt́ŵór̂ḱ âćt̂ív̂ít̂ý. [L̂éâŕn̂ ḿôŕê](https://web.dev/unused-javascript/)."
   },
   "lighthouse-core/audits/byte-efficiency/unused-javascript.js | title": {
     "message": "R̂éd̂úĉé ûńûśêd́ Ĵáv̂áŜćr̂íp̂t́"
